2006-09-18  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindowFactory.java (MemWinBlocker.addFailed): 
	Logging call made directly to errorLog rather than EventLogger.
	* register/RegisterWindowFactory.java (RegWinBlocker.addFailed): Ditto.
	* disassembler/DisassemblyWindowFactory.java (DisWinBlocker.addFailed):
	Ditto.

2006-09-18  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java: Partial Java-DOC.
	(getProcessObserverControls): Add call to 
	removeObserverByName instead of removeObserver.
	* sessions/DebugProcess.java (removeObserverByName): Added.
	
	* glade/procpop.glade: Remove Vbox encapsulating
	logTextView widget. Fixes bz 3222.

2006-09-16  Mike Cvet  <mcvet@redhat.com>

	* sessions/ProcessPicker.java: Added Javadoc.
	* disassembler/DisassemblyWindowFactory.java: Ditto.
	* disassembler/DisassemblyWindow.java: Ditto.
	* disassembler/DisassemblyFormatDialog.java: Ditto.
	* memory/MemoryWindowFactory.java: Ditto.
	* memory/MemoryWindow.java: Ditto.
	* memory/MemoryFormatDialog.java: Ditto.
	* register/RegisterWindowFactory.java: Ditto.
	* register/RegisterWindow.java: Ditto.
	* register/RegisterFormatDialog.java: Ditto.

2006-09-15  Phil Muldoon  <pmuldoon@redhat.com>

	* FryskGui.java (GLADE_PKG_PATH): Added wrapper class comment

	* Gui.java: Added Java Doc comments.
	(buildTrayManager): New. Refactored from Gui.
	(startCoreEventLoop): Ditto.
	(addInvocationEvents): Ditto.
	(isFryskRunning): Ditto.
	(createFryskDataLocation): Ditto.
	(createFryskLockFile): Ditto.
	(gui): Refactored.

2006-09-14  Mike Cvet  <mcvet@redhat.com>

	* sessions/ProcessPicker.java: Got rid of the proc linked list
	and added a hashtable instead.
	(checkSession): Put GuiProcs into the new hashtable.
	(pickProcs): Instead of iterating through a linked list, grab the
	GuiProc directly from a table since we won't know the order of PIDs
	and would have to iterate the list every time. Fixes #3208.
	* glade/disassemblywindow.glade: Added.