@@ -1,3 +1,8 @@
+2006-09-20  Yao Qi  <qiyaoltc@cn.ibm.com>
+
+	* disassembler/DisassemblyWindow.java: Check null pointer
+	before use it.
+
 2006-09-18  Mike Cvet  <mcvet@redhat.com>
 
 	* memory/MemoryWindowFactory.java (MemWinBlocker.addFailed): 
